[package]
name = "prip"
version = "0.1.1"
edition = "2024"
description = "photo ripper"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
clap-verbosity-flag = "3.0.3"
ctrlc = "3.4.7"
env_logger = "0.11.8"
gphoto2 = "3.4.1"
indicatif = "0.18.0"
inquire = "0.7.5"
log = "0.4.27"

[dev-dependencies]
predicates = "3.1.3"
assert_cmd = "2.0.17"
assert_fs = "1.1.3"
